app/assets/stylesheets/act.css.less
@import 'variables.css.less';
@import 'mixins.css.less';
@import 'btn.css.less';
//@import 'btn-toolbar.css.less';

// --- Actions --- //


// Temporarily remove deletion actions
.act-deletion {
  display: none;
}

.editing-style{
  background-color:white !important;
  box-shadow:inset 0 0 5px rgba(0,0,255,0.2);
  border-top-color:#ACE;
  border-bottom-color:#9AB;
  z-index:1;
}

.btn-toolbar.act-title{
  position: relative;
  padding:0 ;
  padding-left:0.5rem;
  padding-right:5rem;
}
@act-title-color:#444444;

.act-title-input{
  box-sizing:border-box;
  background-color:transparent;
  border:none;
  width:100%;
  //height:2rem;
  padding:.25rem 0;
  font-size: 1rem;
  //overflow:hidden;
  //display:block;
  outline:none;
  .title-font();
  color:@act-title-color;
}

.act-container.not-participating-in .act-title-input{
  color:mix(@act-title-color,white);
}

.act-title.editing{
  .editing-style();
}

.act-title-actions,
.act-title-save-actions{
  position: absolute;
  top:.25rem;
  right:.25rem;
}

.act-container.not-participating-in .act-title-actions{
  display:none;
}

.act-participants{
  position: relative;
  min-height:1.5rem;
  background-color: #EEE;
  border-bottom:1px solid @wc-toolbar-border-color;
  padding:0 .5rem;
  z-index: 3;

  &.editing{
    .editing-style();
  }

  ul{
    margin:0;
    padding:0;
  }


  li.user-reminder{
    display:none;
  }

  input{
    border:none;
    background-color: transparent;
    outline:none;
  }
}

.participant{
  font-size:.8rem;
  color:#888;
  list-style: none;
  display: inline-block;
}
.participant + .participant:before{
  content:", ";
}

.editing .participant{
    background-color:#DEF;
    border:1px solid #ABC;
    padding-left:0.2rem;
    padding-right:0.1rem;
    margin-right:.4rem;
    display:inline-block;
    &:before{
      content:none;
    }
}
.editing .participant-remove{
    color:#CCC;
    position:relative;
    bottom:.05rem;
    padding:0.1rem;
}

.editing .participant-remove:hover{
    color:#888;
}


.token-input-wrap{
  display:inline-block;
  position:relative;
}


.act-participants-actions,
.act-participants-save-actions{
  position: absolute;
  right:.1rem;
  top:50%;
  margin-top:-0.5rem;
}

.participant-remove{
  display: none;
}

.act-participants.editing {
  .participant-remove {
    display: inline;
    cursor: pointer;
  }
}

.act-list{
  padding:0.75rem;
  overflow-x:hidden;
  overflow-y:auto;
  position:absolute;
  bottom:0;
  margin-bottom:2.7rem;
  left:0;
  right:0;
  top:4rem;
  -webkit-overflow-scrolling:touch;
}
.act-container.not-participating-in .act-list{
  bottom:0;
}
.act{
  padding:0.25rem;
}

// These are some real bullshit to adjust the spacing of update messages in relation to regular messages

.act-message + .act-update-users,
.act-message + .act-deletion,
.act-message + .act-move-conversation,
.act-message + .act-retitle {
  padding-top:0.5rem;
}

.act-update-users + .act-message,
.act-move-conversation + .act-message,
.act-deletion + .act-message,
.act-retitle + .act-message {
  margin-top:0.25rem;
}

.act-message{
  padding:0.65rem;
  z-index:1;
  a{
    text-decoration: none;
    color: #28D;
    word-wrap: break-word;
    &:hover{
      text-decoration: underline;
    }
  }

}

// --- Messages --- //
@border-color-message: #D8D8D8;

// --- My Messages --- //
@border-color-act-my-message: #E0E0E0;
@background-color-act-my-message:#F8F8F8;

// --- Pending Messages --- //
@color-pending:#CCC;
@border-color-pending: #E8E8E8;
@background-color-pending:#FBFBFB;


@border-message: 1px solid @border-color-message;
@border-act-my-message: 1px solid @border-color-act-my-message;
@border-pending: 1px solid @border-color-pending;

.act-message + .act-message,
.act + .act-message,
.act-message + .act{
  border-top:@border-message;
}

.act-list .act:first-child{
  border-top:@border-message;
}

.act-list .act:last-child{
  border-bottom:@border-message;
}

.act-message.act-my-message{
  background-color:@background-color-act-my-message;
  border:@border-act-my-message;
  -webkit-transition:0.35s;
  -moz-transition: 0.35s;
  transition: 0.35s;
}

.act-message.act-my-message + .act-message.act-my-message{
  margin-top:1.0rem;
}
.act-message.act-my-message + .act:not(.act-my-message){
  border-top:none;
}
.act-message.act-my-message + .act.act-my-message:not(.act-message){
  border-top:none;
}


.act-message.act-my-message.pending{
  background-color:@background-color-pending;
  border: @border-pending;
  color:@color-pending;
}

.act-unread {
  position:relative;
  z-index: 0;
  &:before{
    content: " ";
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;
    background-color: #BBB;
    width: 0.15rem;
    margin: 0.25rem 0.15rem;
  }
}

.act-sender{
  font-weight: bold;
}

.act-info-group{
  display:inline-block;
}

.act-time{
  color:#DDD;
  font-size: .75rem;
  vertical-align: middle;
  display: inline-block;
}

.act-text{
  padding:0.3rem 0;
  color:#444444;
  line-height: 1.5;
  white-space:pre-wrap;
  margin-top:0.25rem;
}

.act-update-users,
.act-retitle,
.act-deletion,
.act-move-conversation{
  font-size:.75rem;
  color:#CCC;
  text-align: center;
}

.tokens{
  list-style: none;
}

.token-options{
  position:absolute;
  top:100%;
  left:0;
  display:block;
  width: auto;
  min-width: 10rem;
  max-width: 15rem;
  max-height:10rem;
  overflow-y:auto;
  border:1px solid #CCC;
  background-color:#FAFAFA;
  box-shadow:0 0.1rem .4rem rgba(0,0,0,0.2);
}

.token-option{
  display:block;
  padding:0.25rem;
  font-size:0.8rem;
  color:#888;
  cursor:pointer;
  & + .token-option{
    border-top:1px solid #CCC;
  }
  &.target{
    background-color:#EAEAEA;
  }
}

